--- a/website/projects/templates/projects/projects.html
+++ b/website/projects/templates/projects/projects.html
@@ -9,10 +9,10 @@
 	<div class="projects">
 		<div classs="container-fluid">
 			<div class="row">
-				<div class="container-fluid">
-					<div class="row">
+				<div class="container">
+					<div class="row row-centered">
 						{% for post in posts %}
-							<div class="col-md-4">
+							<div class="col-md-4 col-centered">
 								<h3><a href="{% url "proj_display" pk=post.pk %}">{{post}}</a></h3>
 								<p><b>Published:</b> {{post.published_date}}</p>
 						  </div>
