--- a/website/projects/templates/projects/projects.html
+++ b/website/projects/templates/projects/projects.html
@@ -6,7 +6,18 @@
 		<p>Here are all my interesting projects:</p>
 	</div>
 
-	<div class="projects">
+	<div class="middle">
+		<div class="container-fluid">
+			{% for post in posts %}
+				<div class="col-md-4">
+					<h3><a class="btn btn-medium btn-primary" href="{% url "proj_display" pk=post.pk %}">{{post}}</a></h3>
+					<p><b>Published:</b> {{post.published_date}}</p>
+				</div>
+			{% endfor %}
+		</div>
+	</div>
+
+	<!--<div class="projects">
 		<div classs="container-fluid">
 			<div class="row">
 				<div class="container">
@@ -21,5 +32,5 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div>-->
 {% endblock content %}
