Redesigned color scheme and added brand.

--- a/website/projects/static/css/includes/styles.css
+++ b/website/projects/static/css/includes/styles.css
@@ -1,29 +1,9 @@
-.logo{
-	border-bottom: 3px solid aqua;
-}
-
-.middle{
-	background-color: darkslategray;
-}
-
-.middle p{
-	color: white;
-}
-
-.jumbotron{
-	background-color: darkslategray;
-}
-
-.jumbotron p, h4, h2, h1{
-	color: white;
-}
-
 .h1{
 	color: white;
 }
 
 .bottom{
-	border-top: 5px solid aqua;
+	border-top: 5px solid black;
 }
 
 .bottom img{
