--- a/website/projects/templates/projects/base.html
+++ b/website/projects/templates/projects/base.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="{% static "css/includes/bootstrap/css/bootstrap.min.css" %}" type="text/css">
 		<link rel="stylesheet" href="{% static "css/includes/styles.css" %}" type="text/css">
 	</head>
-	<body style="background-color: lightslategray">
+	<body style="background-color: lightgray">
 
 		<div class = "container-fluid">
 
@@ -22,12 +22,15 @@
 			<p></p>
 
 			<header class="top" role="header">
-				<div class="container-fluid">
-					<nav class="navbar navbar-inverse" role="navigation">
+				<div class="container">
+					<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 						<div class = "navbar-header">
 							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
 								<span class="glyphicon glyphicon-align-justify"></span>
 							</button>
+							<a href=# class="navbar-brand">
+								Eyob W.
+							</a>
 						</div>
 						<div id="navbarCollapse" class="collapse navbar-collapse">
 							<ul class="nav navbar-nav">
