--- a/website/projects/templates/projects/projects.html
+++ b/website/projects/templates/projects/projects.html
@@ -8,30 +8,22 @@
 
 	<div class="middle">
 		<div class="container-fluid">
-			<p></p>
-			{% for post in posts %}
-				<div class="col-md-4">
-					<a class="btn btn-medium btn-primary" href="{% url "proj_display" pk=post.pk %}">{{post}}</a>
-					<p><b>Published:</b> {{post.published_date}}</p>
-				</div>
-			{% endfor %}
-		</div>
-	</div>
-
-	<!--<div class="projects">
-		<div classs="container-fluid">
 			<div class="row">
-				<div class="container">
-					<div class="row row-centered">
-						{% for post in posts %}
-							<div class="col-md-4 col-centered">
-								<h3><a href="{% url "proj_display" pk=post.pk %}">{{post}}</a></h3>
-								<p><b>Published:</b> {{post.published_date}}</p>
-						  </div>
-						{% endfor %}
+				{% for post in posts %}
+					<div class="col-md-4">
+						<div class="panel panel-primary">
+							<div class="panel-heading">
+								<h3 class="panel-title">
+									<a href="{% url "proj_display" pk=post.pk %}">{{post}}</a>
+								</h3>
+							</div>
+							<div class="panel-body">
+								<p><b>Published: </b>{{post.published_date}}</p>
+							</div>
+						</div>
 					</div>
-				</div>
+				{% endfor %}
 			</div>
 		</div>
-	</div>-->
+	</div>
 {% endblock content %}
