Fixed menu toggle issue. Due to one switched letter in file path.

--- a/website/projects/templates/projects/base.html
+++ b/website/projects/templates/projects/base.html
@@ -22,7 +22,7 @@
 			<p></p>
 
 			<header class="top" role="header">
-				<div class="container">
+				<div class="container-fluid">
 					<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 						<div class = "navbar-header">
 							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
@@ -62,7 +62,7 @@
 			</div>
 		</div>
 
-		<script src="{% static "ccs/includes/jquery/jquery-1.11.1.min.js"%}"></script>
-		<script src="{% static "css/includes/bootstrap/js/bootstrap.min.js"%}"></script>
+		<script src="{% static "css/includes/jquery/jquery-1.11.1.min.js" %}"></script>
+		<script src="{% static "css/includes/bootstrap/js/bootstrap.min.js" %}"></script>
 	</body>
 </html>
