--- a/website/projects/templates/projects/base.html
+++ b/website/projects/templates/projects/base.html
@@ -24,21 +24,25 @@
 			<header class="top" role="header">
 				<div class="container-fluid">
 					<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-						<div class = "navbar-header">
-							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
-								<span class="glyphicon glyphicon-align-justify"></span>
-							</button>
-							<a href=# class="navbar-brand">
-								Eyob W.
-							</a>
-						</div>
-						<div id="navbarCollapse" class="collapse navbar-collapse">
-							<ul class="nav navbar-nav">
-								<li><a href="{% url "index" %}">Home</a></li>
-								<li><a href="{% url "about" %}">About</a></li>
-								<li><a href="{% url "proj_list" %}">Projects</a></li>
-								<li><a href="{% url "extras" %}">Extras</a></li>
-							</ul>
+						<div class="container">
+							<div class = "navbar-header">
+								<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
+									<span class="glyphicon glyphicon-align-justify"></span>
+								</button>
+								<a href=# class="navbar-brand">
+									Eyob W.
+								</a>
+							</div>
+							<div id="navbarCollapse" class="collapse navbar-collapse">
+								<ul class="nav navbar-nav">
+									{%block navbar%}
+									{%endblock%}
+								</ul>
+								<ul class="nav navbar-nav navbar-right">
+									<li><a href=#>Log In</a></li>
+									<li><a href=#>Sign Up</a></li>
+								</ul>
+							</div>
 						</div>
 					</nav>
 				</div>
