--- a/website/projects/templates/projects/proj_display.html
+++ b/website/projects/templates/projects/proj_display.html
@@ -1,5 +1,12 @@
 {% extends "projects/base.html" %}
 
+{%block navbar%}
+	<li><a href="{% url "index" %}">Home</a></li>
+	<li><a href="{% url "about" %}">About</a></li>
+	<li class="active"><a href="{% url "proj_list" %}">Projects</a></li>
+	<li><a href="{% url "extras" %}">Extras</a></li>
+{%endblock%}
+
 {% block content %}
   <div class="container-fluid">
     <h2>{{post}}</h2>
