--- a/website/projects/templates/projects/base.html
+++ b/website/projects/templates/projects/base.html
@@ -13,15 +13,11 @@
 
 		<div class = "container-fluid">
 
-			<div class="logo">
-				<div class="container-fluid">
-					<h4>Eyob Woldeghebriel <small>A Web Developer</small></h4>
-				</div>
-			</div>
+
 
 			<p></p>
 
-			<header class="top" role="header">
+			<header class="top" role="header" style="padding: 20px">
 				<div class="container-fluid">
 					<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 						<div class="container">
@@ -39,6 +35,7 @@
 									{%endblock%}
 								</ul>
 								<ul class="nav navbar-nav navbar-right">
+									<li class="nav-divider"></li>
 									<li><a href=#>Log In</a></li>
 									<li><a href=#>Sign Up</a></li>
 								</ul>
