Added pictures model and thumbnails to project list.

--- a/website/projects/templates/projects/base.html
+++ b/website/projects/templates/projects/base.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="{% static "css/includes/bootstrap/css/bootstrap.min.css" %}" type="text/css">
 		<link rel="stylesheet" href="{% static "css/includes/styles.css" %}" type="text/css">
 	</head>
-	<body style="background-color: lightgray">
+	<body style="background-color: #008080">
 
 		<div class = "container-fluid">
 
