--- a/website/projects/templates/projects/projects.html
+++ b/website/projects/templates/projects/projects.html
@@ -30,7 +30,7 @@
 								<div class="media">
 								  <div class="media-left">
 								    <a href="#">
-								      <img class="media-object" src="{% static "images/RPi_inside.gif" %}" style="width: 40px; height: 40px">
+								      <img class="media-object" src="{{post.picture.address}}" style="width: 40px; height: 40px">
 								    </a>
 								  </div>
 								  <div class="media-body">
