Replaced log in and sign up buttons with search bars.

--- a/website/projects/templates/projects/base.html
+++ b/website/projects/templates/projects/base.html
@@ -28,6 +28,11 @@
 							<div id="navbarCollapse" class="collapse navbar-collapse">
 								{%block navbar%}
 								{%endblock%}
+								<form role="search" class="navbar-form navbar-right">
+									<div class="form-group">
+										<input type="text" class="form-control" placeholder="Search">
+									</div>
+								</form>
 							</div>
 						</div>
 					</nav>
