--- a/website/projects/templates/projects/base.html
+++ b/website/projects/templates/projects/base.html
@@ -28,10 +28,10 @@
 							<div id="navbarCollapse" class="collapse navbar-collapse">
 								{%block navbar%}
 								{%endblock%}
-								<form role="search" class="navbar-form navbar-right">
-									<div class="form-group">
-										<input type="text" class="form-control" placeholder="Search">
-									</div>
+								<form action="/search/" method="get" role="search" class="navbar-form navbar-right">
+									{% csrf_token %}
+											<input type="text" id="query" name="query" maxlength="200" class="form-control" placeholder="Search">
+											<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
 								</form>
 							</div>
 						</div>
@@ -55,6 +55,7 @@
 					</blockquote>
 				</div>
 			</div>
+
 		</div>
 
 		<script src="{% static "css/includes/jquery/jquery-1.11.1.min.js" %}"></script>
