--- a/website/projects/templates/projects/base.html
+++ b/website/projects/templates/projects/base.html
@@ -29,9 +29,10 @@
 								{%block navbar%}
 								{%endblock%}
 								<form action="/search/" method="get" role="search" class="navbar-form navbar-right">
-									{% csrf_token %}
-											<input type="text" id="query" name="query" maxlength="200" class="form-control" placeholder="Search">
-											<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+									<div class="input-group form-group">
+										<input class="form-control" type="text" name="q" placeholder="Search">
+										<span class="input-group-btn"><button class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button></span>
+									</div>
 								</form>
 							</div>
 						</div>
