--- a/website/search/templates/search/results.html
+++ b/website/search/templates/search/results.html
@@ -13,6 +13,12 @@
   <div class="middle">
     <div class="container-fluid">
       <div class="row">
+        {% if message != None %}
+          <h3 class="well">{{message}}</h3>
+        {% endif %}
+        {% if message = None %}
+          <h3 class="well">Results for "{{q}} " :</h3>
+        {% endif %}
         {% for post in posts %}
           <div class="col-md-4">
               <div class="well" style="padding-bottom: 10px">
