Fixed thumbnail positioning.

--- a/website/projects/templates/projects/proj_display.html
+++ b/website/projects/templates/projects/proj_display.html
@@ -22,7 +22,7 @@
 			    <h2>{{post}}</h2>
 			    <h4><b>Published: </b>{{post.published_date}}</h4>
 				</div>
-				<img src="{{post.thumbnail.address}}" class="pull-left" style="height: 100px">
+				<img src="{{post.thumbnail.address}}" class="pull-right" style="height: 100px">
 			</div>
 		</div>
 		<div class="well">
