--- a/website/search/templates/search/results.html
+++ b/website/search/templates/search/results.html
@@ -25,7 +25,7 @@
                 <div class="media">
                   <div class="media-left">
                     <a href="#">
-                      <img class="media-object" src="{{post.picture.address}}" style="width: 40px; height: 40px">
+                      <img class="media-object" src="{{post.thumbnail.address}}" style="width: 40px; height: 40px">
                     </a>
                   </div>
                   <div class="media-body">
