--- a/website/projects/templates/projects/extras.html
+++ b/website/projects/templates/projects/extras.html
@@ -4,8 +4,8 @@
 	<ul class="nav navbar-nav">
 		<li><a href="{% url "index" %}">Home</a></li>
 		<li><a href="{% url "about" %}">About</a></li>
-		<li><a href="{% url "proj_list" %}">Projects</a></li>
-		<li class="active"><a href="{% url "extras" %}">Extras</a></li>
+		<li><a href="{% url "proj_list" %}">Projects</a></li>		
+		<li><a href="{% url "contact" %}">Contact</a></li>
 	</ul>
 {%endblock%}
 
