--- a/website/projects/templates/projects/projects.html
+++ b/website/projects/templates/projects/projects.html
@@ -6,7 +6,7 @@
 		<li><a href="{% url "index" %}">Home</a></li>
 		<li><a href="{% url "about" %}">About</a></li>
 		<li class="active"><a href="{% url "proj_list" %}">Projects</a></li>
-		<li><a href="{% url "extras" %}">Extras</a></li>
+		<li><a href="{% url "contact" %}">Contact</a></li>
 	</ul>
 {%endblock%}
 
