--- a/website/search/templates/search/results.html
+++ b/website/search/templates/search/results.html
@@ -5,7 +5,7 @@
 		<li><a href="{% url "index" %}">Home</a></li>
 		<li><a href="{% url "about" %}">About</a></li>
 		<li><a href="{% url "proj_list" %}">Projects</a></li>
-		<li><a href="{% url "extras" %}">Extras</a></li>
+		<li><a href="{% url "contact" %}">Contact</a></li>
 	</ul>
 {%endblock%}
 
