--- a/website/projects/templates/projects/base.html
+++ b/website/projects/templates/projects/base.html
@@ -49,10 +49,9 @@
 
 			<div class="bottom">
 				<div class="container-fluid">
-					<p>Contact @ eyobworrede@outlook.com</p>
 					<blockquote class="pull-right">
 						<p>"Raspberry Pis are amazing."</p>
-						<small>by <cite>Eyob Woldeghebriel</cite></small>
+						<small style="color: black">by <cite>Eyob Woldeghebriel</cite></small>
 					</blockquote>
 				</div>
 			</div>
