Changed labels and updated logo placement.

--- a/website/projects/templates/projects/projects.html
+++ b/website/projects/templates/projects/projects.html
@@ -32,7 +32,7 @@
 								  </div>
 								  <div class="media-body">
 								    <h4 class="media-heading"><a href="{% url "proj_display" pk=post.pk %}">{{post}}</a></h4>
-								    <b>Published: </b>{{post.published_date}}
+								    <b>Updated: </b>{{post.published_date}}
 								  </div>
 								</div>
 						</div>
