--- a/website/projects/templates/projects/proj_display.html
+++ b/website/projects/templates/projects/proj_display.html
@@ -20,9 +20,9 @@
   <div class="container-fluid">
 		<div class="well">
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-xs-4">
 			    <h2>{{post}}</h2>
-			    <h4><b>Published: </b>{{post.published_date}}</h4>
+			    <h4><b>Updated: </b>{{post.published_date}}</h4>
 				</div>
 				<img src="{{post.thumbnail.address}}" class="pull-right" style="height: 100px">
 			</div>
