Added captions to pictures and removed need for thumbnails

--- a/website/projects/templates/projects/proj_display.html
+++ b/website/projects/templates/projects/proj_display.html
@@ -38,6 +38,7 @@
 				<div class="row">
 					<img src="{{picture.address}}" style="height: 200px; max-width: 95%;padding-left: 15px; padding-bottom: 15px">
 				</div>
+				<p><b>{{picture.caption}}</b></p>
 			{% endfor %}
 		</div>
   </div>
