Fixed placement of image in about page.

--- a/website/about/templates/about/about.html
+++ b/website/about/templates/about/about.html
@@ -12,10 +12,9 @@
 {%endblock%}
 
 {% block content %}
-	<div class="jumbotron">
+	<div class="well">
 		<div class="container-fluid">
-			<div class="row">
-				<img src="http://baxtercoaching.com/wp-content/uploads/2013/12/facebook-default-no-profile-pic-300x300.jpg" style="padding-bottom: 10px" align="left" hspace="20px">
+				<img src="http://baxtercoaching.com/wp-content/uploads/2013/12/facebook-default-no-profile-pic-300x300.jpg" style="padding-bottom: 10px; max-width: 85%" align="left" hspace="20px">
 
 					<p style="font-size: 15px; font-family: arial">
 						<strong>So far, this website has been hard-coded in HTML and CSS
@@ -51,7 +50,6 @@
 	jsfajlkdfjal;sjf;lajdf;lajsf;lajlsfjaslfjal;dsjfla;jf;alkjf;lasjfla</strong>
 					</p>
 
-			</div>
 		</div>
 	</div>
 {% endblock content %}
