--- a/website/about/templates/about/about.html
+++ b/website/about/templates/about/about.html
@@ -19,7 +19,7 @@
 					<h3>{{c.title}}</h3>
 					<p>{{c.content}}</p>
 					{% for subc in c.subcategory_set.all %}
-						<h4><b>{{subc.title}}</h4></b>
+						<h4><b>{{subc.title}}</b></h4>
 						<p>{{subc.content}}</p>
 					{% endfor %}
 				{% endfor %}
