Added carousel to index page and modified models to work with it. Also fixed spacing of links in project pages.

--- a/website/projects/templates/projects/base.html
+++ b/website/projects/templates/projects/base.html
@@ -60,5 +60,6 @@
 
 		<script src="{% static "css/includes/jquery/jquery-1.11.1.min.js" %}"></script>
 		<script src="{% static "css/includes/bootstrap/js/bootstrap.min.js" %}"></script>
+		<script> $('#myCarousel').carousel({ interval: 7500 }) </script>
 	</body>
 </html>
