--- a/website/projects/templates/projects/index.html
+++ b/website/projects/templates/projects/index.html
@@ -11,11 +11,34 @@
 	</ul>
 {%endblock%}
 
-{% block content %}
-	<div class="jumbotron">
-		<div class="container-fluid">
-			<h1>Website is undergoing maintenance!</h1>
-			<p>Look at the about page to learn more.</p>
+{% block content %}page to learn more.</p>
+
+	<div class="carousel slide" id="myCarousel" data-ride="carousel">
+
+		<ol class="carousel-indicators">
+			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+			<li data-target="#myCarousel" data-slide-to="1"></li>
+			<li data-target="#myCarousel" data-slide-to="2"></li>
+		</ol>
+
+		<div class="carousel-inner">
+
+			{% for post in posts %}
+				<div class="item {% if forloop.first %} active {% endif %}">
+					<a href="{% url "proj_display" pk=post.pk %}"><img src="{{post.carousel_pic.address}}" alt="Blue Code Wall" class="img-responsive"></a>
+					<div class="carousel-caption">
+						<h3>{{post.title}}</h3>
+					</div>
+				</div>
+			{% endfor %}
+
+			<a href="#myCarousel" class="carousel-control left" data-slide="prev">
+				<span class="icon-prev"></span>
+			</a>
+
+			<a href="#myCarousel" class="carousel-control right" data-slide="next">
+				<span class="icon-next"></span>
+			</a>
 		</div>
 	</div>
 
