--- a/website/projects/templates/projects/index.html
+++ b/website/projects/templates/projects/index.html
@@ -11,14 +11,14 @@
 	</ul>
 {%endblock%}
 
-{% block content %}page to learn more.</p>
+{% block content %}
 
 	<div class="carousel slide" id="myCarousel" data-ride="carousel">
 
 		<ol class="carousel-indicators">
-			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-			<li data-target="#myCarousel" data-slide-to="1"></li>
-			<li data-target="#myCarousel" data-slide-to="2"></li>
+			{% for post in posts %}
+				<li data-target="#myCarousel" data-slide-to="{{forloop.counter0}}" {% if forloop.first %} class="active {% endif %}"></li>
+			{% endfor %}
 		</ol>
 
 		<div class="carousel-inner">
