Added sender email to emails sent through contact. Fixed link issue on mobile with carousel.

--- a/website/projects/templates/projects/base.html
+++ b/website/projects/templates/projects/base.html
@@ -21,7 +21,7 @@
 								<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
 									<span class="glyphicon glyphicon-align-justify"></span>
 								</button>
-								<a href=# class="navbar-brand">
+								<a href="{% url "index" %}" class="navbar-brand">
 									Eyob W.
 								</a>
 							</div>
