--- a/website/projects/templates/projects/base.html
+++ b/website/projects/templates/projects/base.html
@@ -61,5 +61,15 @@
 		<script src="{% static "css/includes/jquery/jquery-1.11.1.min.js" %}"></script>
 		<script src="{% static "css/includes/bootstrap/js/bootstrap.min.js" %}"></script>
 		<script> $('#myCarousel').carousel({ interval: 7500 }) </script>
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-68396400-1', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
 	</body>
 </html>
