Removed set height of images in project display pages.

--- a/website/projects/templates/projects/proj_display.html
+++ b/website/projects/templates/projects/proj_display.html
@@ -37,7 +37,7 @@
 			<p></p>
 			{% for picture in pictures %}
 				<div class="row">
-					<img src="{{picture.address}}" style="height: 200px; max-width: 95%; padding-left: 15px; padding-bottom: 15px">
+					<img src="{{picture.address}}" style="max-width: 95%; padding-left: 15px; padding-bottom: 15px">
 				</div>
 				<p><b>{{picture.caption}}</b></p>
 			{% endfor %}
