--- a/website/projects/templates/projects/base.html
+++ b/website/projects/templates/projects/base.html
@@ -47,12 +47,11 @@
 
 			<p></p>
 
-			<div class="bottom">
+			<div class="bottom" style="border-top: 5px solid #f5f5f5">
 				<div class="container-fluid">
-					<blockquote class="pull-right">
-						<p>"Raspberry Pis are amazing."</p>
-						<small style="color: black">by <cite>Eyob Woldeghebriel</cite></small>
-					</blockquote>
+					<h4 align="right" style="color: #f5f5f5">
+						Eyob Woldeghebriel
+					</h4>
 				</div>
 			</div>
 
